--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,11 +13,12 @@ const navItems = [
       <!-- Logo -->
       <div class="flex-shrink-0">
         <a href="/" class="flex items-center">
-          <span class="text-xl font-bold text-light-primary dark:text-dark-primary">veb</span>
-          <span class="text-xl font-bold text-light-textPrimary dark:text-dark-textPrimary">Labs</span>
+          <img src="/images/veblabslogoblue.png" alt="VebLabs Logo" class="w-6 h-6 p-1 " />
+          <span class="text-xl font-bold text-light-textPrimary dark:text-dark-textPrimary">veb</span>
+          <span class="text-xl font-bold text-light-primary dark:text-dark-primary">Labs</span>
         </a>
       </div>
-
+      
       <!-- Desktop Navigation -->
       <nav class="hidden md:flex items-center space-x-8">
         {navItems.map(item => (
